# laboratory

./: .gitignore  README.md  test.txt
10-queen/: TenQueenMultiSolution.java  TenQueenSingleSolution.java
10-queens-maven/: readme.txt
android/: AndroidManifest.xml  build.xml  debug  release
android-ant/: debug
android-studio/: build.gradle  import-summary.txt
angular-employees/: README.md  angular.json  package-lock.json  package.json
angular-getting-started/: package-lock.json
ansible/: dev.txt  hosts  vhost.tpl
autotools/: Makefile  Makefile.am  Makefile.in  bibledit.cpp  config.h  config.h.in  config.status  configure  configure.ac  pkgdata.txt  test
autotools/src/: bibledit.cpp
boost/: main.cpp  main.h  run
c++/: CMakeLists.txt  Makefile  alignment.cpp  alignment.h  any_of_all_of_none_of.cpp  any_of_all_of_none_of.h  atomics.cpp  atomics.h  bad_coding.cpp  bad_coding.h  binary_search.cpp  binary_search.h  bits.cpp  bits.h  bounds_limits.cpp  bounds_limits.h  characters.cpp  characters.h  classes.cpp  classes.h  clocking.cpp  clocking.h  concurrency.cpp  concurrency.h  constraints.cpp  constraints.h  containers.cpp  containers.h  coroutines.cpp  coroutines.h  counting.cpp  counting.h  exceptions.cpp  exceptions.h  expected.cpp  expected.h  filesystem.cpp  filesystem.h  fold_expressions.cpp  fold_expressions.h  (+37 more)
c++-examples/: 23.cpp  Makefile  main.cpp
c++17/: main.cpp  main.h  run  run.sln  run.vcxproj
c++20/: Makefile  main.cpp  main.h  run
c++23/: Makefile  main.cpp  main.h
c++_cmake/: CMakeLists.txt  calls.txt  main.cpp
c++_cmake/concepts_library/: constraints_concepts.cpp  functions.h
c++_cmake/concurrency_support_library/mutual_exclusion/: functions.h  latches_and_barriers.cpp  shared_and_unique_locks.cpp  timed_mutex.cpp
c++_cmake/containers_library/: containers.cpp  functions.h
c++_cmake/general_utilities_library/: demos.cpp  functions.h
c++_cmake/language/: declarations.cpp  exceptions.cpp  functions.cpp  functions.h  operators.cpp  templates.cpp
c++_cmake/language/classes/: design_idioms.cpp  design_principles.cpp
c++_cmake/language_support_library/program_utilities/: functions.h  memory.cpp  signals.cpp
c++_cmake/memory_management_library/: functions.h  pointers.cpp
c++_cmake/metaprogramming_library/: automatic_unit_conversion.cpp  functions.h  recursion.cpp  various_demos.cpp
c++_cmake/numerics_library/: functions.h  pseudo_random_number_generation.cpp
c++_cmake/ranges_library/: functions.h  introduction.cpp  introduction.h  various_demos.cpp
c++_cmake/snippets/: functions.h  jthread_timer_condition_variable.cpp  performance.cpp  scoped_timer.cpp  scoped_timer.hpp
certificates/: run
chrome-app/: background.js  index.html  index.js  manifest.json
chrome-native/: background.js  manifest.json
chrome-page-redder/: manifest.json
chrome-wakelock/: background.js  manifest.json
cmake/: CMakeLists.txt  config.h  config.h.in  lib1.cpp  lib1.h  lib2.cpp  lib2.h  library1.cpp  library1.h  library2.cpp  main.cpp  version.h  version.h.in
cmake/library1/: code.cpp
cmake/library2/: code.cpp  code.h
cobol/: calculator.cob  helloworld.cob  readme.txt
concurrency/: main.cpp  main.h  run  stuck.cpp  stuck.h
cpp-core-guidelines/: main.cpp  run
curl-websocket/: Makefile  main.c
django/: readme.txt
edge/: editone.html  index.html
elasticsearch/: 01-vega-basis.txt  02-vega.txt  03-vega-calculate-field.txt  04-vega-transform-aggregate-calculate.txt  04-vega-transform-aggregate.txt  05-vega-average-week.txt  05-vega-transform-aggregate.txt  06-vega-transform-aggregate-calculate.txt  06-vega-transform-aggregate.txt  07-complex-query.txt
encrypt/: AesWrapper.cpp
fill-image/: 1-Johannes-1-7.html  stylesheet.css
flask/: app.py  readme.txt  start.sh  wsgi.py
freeimage/: main.cpp
freetype/: main.cpp  main.h  run
git/: git.cpp
gsl/: bsplines.cpp  data.txt  nlfit.c  plot.txt  run
haak-bible/: libraries.h  main.cpp  run  save  utilities.cpp  utilities.h
high_performance/: main.cpp  run
intervalmap/: ivm.cpp  run
ipv6/: Makefile
kubernetes/: dev.txt  info.txt
laboratory.xcodeproj/: project.pbxproj
lambdas/: main.cpp  run
ldap/: Makefile  main.cpp  main.h  run.sh
libwebkit2gtk/: bibledit.cpp  bibledit.h  demo.cpp  run
libxml2/: html.cpp  run
linux/: Makefile  Makefile.am  Makefile.in  aclocal.m4  bibledit  bibledit-cloud  config.h  config.status  configure  configure.ac  main.cpp  reconfigure  test
linux/autom4te.cache/: output.0  requests  traces.0  traces.1
linux/changes/: bibledit.cpp  bibledit.h
linux/debian/: bibledit-cloud.init  bibledit-cloud.lintian-overrides  bibledit-cloud.postinst  bibledit-cloud.service  changelog  control  rules
linux/src/: bibledit.cpp
mbedtls/: 0readme.txt  build.sh  client.cpp  client.sh  lib.sh  main.cpp  main.h  run  server.cpp  server.sh  windows.sln  windows.vcxproj  windows.vcxproj.filters
microhttpd/: client.sh  main.cpp  run.sh
miniz/: main.cpp  run
modbus/: modbus-client  modbus-client.cpp  modbus-server  modbus-server.cpp  remarks.txt  server
modbus-snmp/: client  main.cpp  modbus-client.cpp  modbus-server.cpp  remarks.txt  run
modern_c++/: Makefile  main.cpp
ncurses/: main.cpp  main.h  main1.cpp  main1.h  run
openstreetmap/: main.cpp  pugixml.cpp  run  utils.cpp  utils.h
playground.xcodeproj/: project.pbxproj
puppet/: dev.txt
python/: casting.py  class.py  dictionary.py  errors-exceptions.py  factory.py  fibo.py  flask-hello.py  ftp.py  function.py  graph.py  hello.py  if.py  index.html  inheritance.py  inner-class.py  lambda.py  lists.py  loop.py  modules.py  overloading.py  polymorph.py  randomm.py  range.py  read.py  recursion.py  scopes.py  sets.py  sqlite.py  stdlib.py  stdlib2.py  threads.py  tuple.py  webserver.py  write.py
qt5/: Makefile  app.cpp  readme.txt  run
quick-blackout-redactor/: README.md
quill/: bubble.html  classes.css  classes.html  classes.js  footnotes.css  footnotes.html  footnotes.js  full.html  snow.html
quill-mini/: index.html  index.js  styles.css
random/: random
snmp/: client  (+10 more)
(+447 files in other folders)
